--- a/workflows/Snakefile
+++ b/workflows/Snakefile
@@ -1,6 +1,6 @@
 # Define which round of the analysis this is - will alter config and original input file
 configfile: "configs/config.yaml" # round1
-input0 = expand("input_temp/ibdverse_{tissue}.h5ad", tissue=config["tissue"])
+input0 = expand("input_temp/ti-Full_cohort-{tissue}.h5ad", tissue=config["tissue"])
 envvars:
     "SINGULARITYENV_LD_LIBRARY_PATH"
 
@@ -22,6 +22,8 @@ rule qc_raw:
         "results/{tissue}/tables/knee.txt",
         #"results/{tissue}/objects/adata_unfilt_log1p_cp10k.h5ad"
     params:
+        tissue_col=config["tissue_col"],
+        label_group_col=config["label_group_col"],
         discard_other_inflams=config["discard_other_inflams"], 
         all_blood_immune=config["all_blood_immune"],
         min_nUMI=config["min_nUMI"],
@@ -53,8 +55,8 @@ rule qc_raw:
         calc_hvgs_together=config["calc_hvgs_together"]
     resources:
         queue='normal',
-        mem_mb=50000,
-        disk_mb=50000
+        mem_mb=250000,
+        disk_mb=250000
     singularity:
         "/software/hgi/softpack/installs/users/eh19//test-scvi-reserve/33-scripts/singularity.sif"
     shell:
@@ -64,6 +66,8 @@ rule qc_raw:
         python bin/001-raw_QC_update.py \
         --input_file {input} \
         --tissue {wildcards.tissue} \
+        --tissue_col {params.tissue_col} \
+        --label_group_col {params.label_group_col} \
         --discard_other_inflams {params.discard_other_inflams} \
         --all_blood_immune {params.all_blood_immune} \
         --min_nUMI {params.min_nUMI} \
@@ -111,8 +115,8 @@ if "scVI" in batch_methods:
             correct_variable_only=config["correct_variable_only"],
         resources:
             queue='gpu-normal -gpu - -m "farm22-gpu0203 farm22-gpu0204"', # Should be gpu-huge
-            mem_mb=15000, # 250000
-            disk_mb=15000
+            mem_mb=50000, # 250000
+            disk_mb=50000
         shell:
             r"""
             mkdir -p results/{wildcards.tissue}/tables/batch_correction
@@ -395,8 +399,8 @@ rule get_umap:
         col_by=config["col_by"]
     resources:
         queue='normal',
-        mem_mb=20000, # 200000
-        disk_mb=20000
+        mem_mb=200000, # 200000
+        disk_mb=200000
     singularity:
             "/software/hgi/softpack/installs/users/eh19//test-scvi-reserve/33-scripts/singularity.sif"
     shell:
