--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,14 +1,15 @@
 # Decide tissue (s)
 tissue: 
-- 'exclude_Healthy-uninflamed' # This is what the pipeline will be ran on. Make sure the input h5 looks like: input_test/adata_raw_input_{tissue}.h5ad" or adjust this in line 13
+- 'IBDRbatch1-8' # This is what the pipeline will be ran on. Make sure the input h5 looks like: input_test/adata_raw_input_{tissue}.h5ad" or adjust this in line 13
 
 # QC parameters
 discard_other_inflams: "no" # Remove non CD inflammtation samples. NO - already done
 all_blood_immune: "no" # Treat all the blood data as immune if using?
+sample_col: "pool_participant" # What column in the .obs defines sample?
 min_nUMI: 500 # Minimum nUMI
-tissue_col: "biopsy_type_final"
-label_group_col: "category_machine"
-relative_grouping: "biopsy_type_final" # For mad computation, what is the grouping we want to use? seperate by "," if >1, e.g "tissue,sum_majority_lineage". NOTE: If applying specific absolute thresholds (e.g for MT%), this needs to be the group used there, else these relative thresholds will be ignored
+tissue_col: "tissue"
+label_group_col: "IBDverse_eqtl:Category"
+relative_grouping: "tissue" # For mad computation, what is the grouping we want to use? seperate by "," if >1, e.g "tissue,sum_majority_lineage". NOTE: If applying specific absolute thresholds (e.g for MT%), this needs to be the group used there, else these relative thresholds will be ignored
 relative_nMAD_threshold: 2.5 # Threshold of nMad
 nMad_directionality: "bi" # Can be bi|uni. unidirectional medians cells only removed for nMads above or below the median. bidirectional medians cells removed for nMads exceeding threshold in either direction
 threshold_method: "None" # Whether to use relative thresholds and in which direction. Can be "specific" to be specific to the relative_grouping, "outer" to apply the outer window of the relative groupings, or None to not apply at all.  
@@ -26,17 +27,18 @@ use_abs_per_samp: "yes" # Use these absolute metrics
 filt_cells_pre_samples: "yes" # Filter the cells based on the above metrics BEFORE filtering the samples. NOTE: This will drastically alter the distirbution of QC metrics and therefore sample choice
 plot_per_samp_qc: "yes" # Plot the distribution of QC parameters across samples (e.g within tissue) - Takes up LOTS of memory if lots of samples
 filt_blood_keras: "no" # Filter blood for keras probability? Some cells annotated as non-immune
-n_variable_genes: 5000 # Number of variable genes for PCA calculation
-hvgs_within: "sanger_sample_id" # How to calculate HVGs? If don't want to use, set to None
+n_variable_genes: 3000 # Number of variable genes for PCA calculation
+hvgs_within: "pool_participant" # How to calculate HVGs? If don't want to use, set to None
 remove_problem_genes: "yes" # Remover MT/RP/IG genes from the highly variable genes?
 per_samp_relative_threshold: "no" # Do you want to apply sample-level QC based on relative threshold? If so, the above value of relative_nMAD_threshold and directionality will be used
-sample_level_grouping: "biopsy_type_final" # How do you want to group samples? E.g within "tissue" or "disease_tissue"
+sample_level_grouping: "tissue" # How do you want to group samples? E.g within "tissue" or "disease_tissue"
 cols_sample_relative_filter: "nCells" # Which cols to carry out the relative filtering on at the sample level? Can be any of ['nCells', 'Median_nCounts', 'Median_nGene_by_counts', 'Median_MT'], or the same preceded by 'log10_'. These should be seperated by ",", e.g "Median_nCounts,Median_nGene_by_counts"
 calc_hvgs_together: "no"
+min_cells_per_gene: 5
 # NOTE: per-sample level thresholds are currently computed with samples excluded by hard thresholds kept in. I.e hard thresholds are currently not applied BEFORE the relative thresholds
 
 # Batch correction options
-batch_column: "sanger_sample_id"
+batch_column: "pool_participant"
 batch_correction_methods: ["scVI", "scVI_default", "scANVI"] # List of batch correction methods to test, max = ["scVI", "scVI_default", "scANVI", "Harmony"]
 correct_variable_only: True # Compute embedding on variable genes only?
 scANVI_annot_column: "sum_majority_lineage"
@@ -50,10 +52,10 @@ pref_matrix: "scVI" # Can leave empty if benching
 use_bbknn: False
 nn_choice: "Manual" # Can be 'Manual' to use pre-defined NN parameter provided by 'nn' parameter, 'bbknn' to use the nn selected by bbknn or 'array' to run an array test over 'nn_values' parameter 
 nn_values: [15, 30, 50, 100, 150, 200, 250, 300, 350, 400, 450, 500]
-nn: 50
+nn: 20
 
 # What to plot on the initial UMAP post clustering? Check these w/ respect to embedding
-col_by: "experiment_id,tissue,sum_majority_lineage,category__machine,label__machine,sum_Immune,sum_Epithelial,sum_Mesenchymal,log10_total_counts,total_counts_nMAD,log10_n_genes_by_counts,n_genes_by_counts_nMAD,MT_perc_nMads,total_counts_gene_group__ribo_rna,log1p_total_counts_gene_group__ribo_rna,pct_counts_gene_group__mito_transcript,EPCAM,KRT8,KRT18,CDH5,COL1A1,COL1A2,COL6A2,VWF,PTPRC,CD3D,CD3G,CD3E,CD79A,CD79B,CD14,FCGR3A,CD68,CD83,CSF1R,FCER1G"
+col_by: "convoluted_samplename,tissue,Celltypist:IBDverse_eqtl:predicted_labels,IBDverse_eqtl:Category,log10_total_counts,total_counts_nMAD,log10_n_genes_by_counts,n_genes_by_counts_nMAD,total_counts_gene_group__ribo_rna,log1p_total_counts_gene_group__ribo_rna,pct_counts_gene_group__mito_transcript,EPCAM,KRT8,KRT18,CDH5,COL1A1,COL1A2,COL6A2,VWF,PTPRC,CD3D,CD3G,CD3E,CD79A,CD79B,CD14,FCGR3A,CD68,CD83,CSF1R,FCER1G"
 
 # Optimise run parameters?
 optimise_run_params: False
